--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "db:push": "npx prisma db push",
+    "postinstall": "prisma generate",
     "lint": "next lint"
   },
   "dependencies": {
