--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dompurify": "^3.0.8",
     "lucide-react": "^0.334.0",
     "next": "14.1.0",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
